# gedit

./: HACKING  Makefile.am  NEWS  README  configure.ac  gedit.doap
data/: Makefile.am  gedit-osx.gschema.override  gedit.css  gedit.desktop.in.in  org.gnome.gedit.gschema.xml.in.in  osx.accels  osx.css
docs/: class-diagram.dia
docs/es/: es.po
docs/reference/: gedit-sections.txt  (+1 more)
gedit/: Gedit.py  Makefile.am  gedit-animatable.c  gedit-animated-overlay.c  gedit-animated-overlay.h  gedit-app-osx.c  gedit-app-osx.h  gedit-app-win32.c  gedit-app.c  gedit-app.h  gedit-cell-renderer-button.c  gedit-cell-renderer-button.h  gedit-close-button.c  gedit-close-button.h  gedit-command-line.c  gedit-command-line.h  gedit-commands-edit.c  gedit-commands-file.c  gedit-commands-help.c  gedit-commands-search.c  gedit-commands.h  gedit-dbus.c  gedit-debug.c  gedit-debug.h  gedit-dirs.c  gedit-dirs.h  gedit-document-input-stream.c  gedit-document-input-stream.h  gedit-document-loader.c  gedit-document-output-stream.c  gedit-document-output-stream.h  gedit-document-saver.c  gedit-document.c  gedit-documents-panel.c  gedit-documents-panel.h  gedit-encodings-combo-box.c  gedit-encodings-dialog.c  gedit-fifo.c  gedit-file-chooser-dialog.c  gedit-floating-slider.c  (+55 more)
help/: Makefile.am
help/C/: gedit-change-color-scheme.page  gedit-change-default-font.page  gedit-close-file.page  gedit-create-new-file.page  gedit-files-basic.page  gedit-full-screen.page  gedit-open-files-from-sidepane.page  gedit-open-files.page  gedit-open-on-server.page  gedit-open-recent.page  gedit-plugin-guide.page  gedit-plugins-bookmarks.page  gedit-plugins-bookmarks.page.stub  gedit-plugins-bracket-comp.page  gedit-plugins-change-case.page  gedit-plugins-character-map.page  gedit-plugins-character-map.page.stub  gedit-plugins-check-update.page  gedit-plugins-code-assistance.page  gedit-plugins-code-assistance.page.stub  gedit-plugins-code-comment.page  gedit-plugins-code-comment.page.stub  gedit-plugins-color-picker.page  gedit-plugins-color-picker.page.stub  gedit-plugins-commander.page  gedit-plugins-commander.page.stub  gedit-plugins-cossa.page.stub  gedit-plugins-dashboard.page  gedit-plugins-dashboard.page.stub  gedit-plugins-doc-stats.page  gedit-plugins-draw-spaces.page  gedit-plugins-draw-spaces.page.stub  gedit-plugins-external-tools.page  gedit-plugins-file-browser.page  gedit-plugins-insert-date-time.page  gedit-plugins-install.page  gedit-plugins-join-split-lines.page  gedit-plugins-join-split-lines.page.stub  gedit-plugins-modelines.page  gedit-plugins-multi-edit.page  (+33 more)
help/bg/: bg.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/ja/: ja.po
help/lv/: lv.po
help/ru/: ru.po
help/sl/: sl.po
help/zh_CN/: zh_CN.po
osx/: README  gedit.bundle  launcher.sh  makebundle.sh  makedmg.sh
plugins/: Makefile.am
plugins/changecase/: gedit-changecase-plugin.c
plugins/checkupdate/: gedit-check-update-plugin.c
plugins/docinfo/: Makefile.am  gedit-docinfo-plugin.c  gedit-docinfo-plugin.ui  gedit-docinfo.gresource.xml
plugins/externaltools/: Makefile.am
plugins/externaltools/tools/: capture.py  filelookup.py  functions.py  linkparsing.py  linkparsing_test.py  manager.py  outputpanel.py  outputpanel.ui  tools.ui  windowactivatable.py
plugins/filebrowser/: Makefile.am  gedit-file-bookmarks-store.c  gedit-file-browser-messages.c  gedit-file-browser-plugin.c  gedit-file-browser-store.c  gedit-file-browser-view.c  gedit-file-browser-view.h  gedit-file-browser-widget-ui.xml  gedit-file-browser-widget.c  gedit-file-browser-widget.h  gedit-file-browser.gresource.xml  messages.xml  org.gnome.gedit.plugins.filebrowser.gschema.xml.in.in
plugins/filebrowser/messages/: gedit-file-browser-message-activation.c  gedit-file-browser-message-activation.h  gedit-file-browser-message-add-context-item.c  gedit-file-browser-message-add-context-item.h  gedit-file-browser-message-add-filter.c  gedit-file-browser-message-add-filter.h  gedit-file-browser-message-get-root.c  gedit-file-browser-message-get-root.h  gedit-file-browser-message-get-view.c  gedit-file-browser-message-get-view.h  gedit-file-browser-message-id-location.c  gedit-file-browser-message-id-location.h  gedit-file-browser-message-id.c  gedit-file-browser-message-id.h  gedit-file-browser-message-set-emblem.c  gedit-file-browser-message-set-emblem.h  gedit-file-browser-message-set-root.c  gedit-file-browser-message-set-root.h  messages.h
plugins/modelines/: gedit-modeline-plugin.c  modeline-parser.c  modeline-parser.h
plugins/pythonconsole/pythonconsole/: config.py
plugins/quickopen/quickopen/: __init__.py  popup.py  virtualdirs.py
plugins/snippets/data/: Makefile.am  c.xml  chdr.xml  html.xml  javascript.xml  mallard.xml
plugins/snippets/snippets/: Makefile.am  __init__.py  appactivatable.py  completion.py  document.py  helper.py  importer.py  library.py  manager.py  placeholder.py  shareddata.py  snippet.py  snippets.ui  windowactivatable.py
plugins/sort/: Makefile.am  gedit-sort-plugin.c  gedit-sort.gresource.xml  sort.plugin.desktop.in
plugins/spell/: Makefile.am  gedit-automatic-spell-checker.c  gedit-spell-checker-dialog.c  gedit-spell-checker-language.c  gedit-spell-checker.c  gedit-spell-language-dialog.c  gedit-spell-osx.c  gedit-spell-osx.h  gedit-spell-plugin.c  gedit-spell.gresource.xml  languages-dialog.ui
plugins/time/: Makefile.am  gedit-time-dialog.ui  gedit-time-plugin.c  gedit-time-setup-dialog.ui  gedit-time.gresource.xml  org.gnome.gedit.plugins.time.gschema.xml.in.in
plugins/zeitgeist/: gedit-zeitgeist-plugin.c
po/: LINGUAS  POTFILES.in  af.po  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  (+26 more)
tests/: Makefile.am  document-input-stream.c  document-output-stream.c  document-saver.c  test-overlay.c
tools/: generate-message.py
(+22 files in other folders)
