include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gedit
DOC_FIGURES = \
	figures/gedit-icon.png \
	figures/gedit-new-external-tool.png \
	figures/gedit-open-location.png \
	figures/gedit3-screenshot.png \
	figures/gedit-side-pane1.png \
	figures/gedit-side-pane2.png \
	figures/gedit-side-pane3.png

DOC_PAGES = \
	gedit-change-color-scheme.page \
	gedit-close-file.page \
	gedit-create-new-file.page \
	gedit-edit-as-root.page \
	gedit-files-basic.page \
	gedit-full-screen.page \
	gedit-open-files-from-sidepane.page \
	gedit-open-files.page \
	gedit-open-on-server.page \
	gedit-open-recent.page \
	gedit-plugin-guide.page \
	gedit-plugins-bracket-comp.page \
	gedit-plugins-change-case.page \
	gedit-plugins-doc-stats.page \
	gedit-plugins-external-tools.page \
	gedit-plugins-file-browser.page \
	gedit-plugins-insert-date-time.page \
	gedit-plugins-install.page \
	gedit-plugins-modelines.page \
	gedit-plugins-pyconsole.page \
	gedit-plugins-snippets.page \
	gedit-plugins-sort.page \
	gedit-plugins-tag-list.page \
	gedit-plugins-terminal.page \
	gedit-printing.page \
	gedit-quickstart.page \
	gedit-replace.page \
	gedit-save-file.page \
	gedit-search.page \
	gedit-shortcut-keys.page \
	gedit-spellcheck.page \
	gedit-syntax-highlighting.page \
	gedit-tabs-moving.page \
	gedit-tabs.page \
	gedit-undo-recent-action.page \
	gedit-view-open-files-in-sidepane.page \
	index.page

DOC_LINGUAS = ar bg ca cs da de el es fi fr hu it ja ko oc pt_BR ru sl sv th uk zh_CN zh_HK zh_TW
dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
