@YELP_HELP_RULES@

HELP_ID = gedit
HELP_MEDIA = \
	figures/gedit-icon.png \
	figures/gedit-new-external-tool.png \
	figures/gedit-open-location.png \
	figures/gedit3-screenshot.png \
	figures/gedit-side-pane1.png \
	figures/gedit-side-pane2.png \
	figures/gedit-side-pane3.png

HELP_FILES = \
	gedit-change-color-scheme.page \
	gedit-change-default-font.page \
	gedit-close-file.page \
	gedit-create-new-file.page \
	gedit-edit-as-root.page \
	gedit-files-basic.page \
	gedit-full-screen.page \
	gedit-open-files-from-sidepane.page \
	gedit-open-files.page \
	gedit-open-on-server.page \
	gedit-open-recent.page \
	gedit-plugin-guide.page \
	gedit-plugins-bookmarks.page \
	gedit-plugins-bracket-comp.page \
	gedit-plugins-change-case.page \
	gedit-plugins-character-map.page \
	gedit-plugins-code-assistance.page \
	gedit-plugins-code-comment.page \
	gedit-plugins-color-picker.page \
	gedit-plugins-commander.page \
	gedit-plugins-dashboard.page \
	gedit-plugins-doc-stats.page \
	gedit-plugins-draw-spaces.page \
	gedit-plugins-external-tools.page \
	gedit-plugins-file-browser.page \
	gedit-plugins-insert-date-time.page \
	gedit-plugins-install.page \
	gedit-plugins-join-split-lines.page \
	gedit-plugins-modelines.page \
	gedit-plugins-multi-edit.page \
	gedit-plugins-pyconsole.page \
	gedit-plugins-quick-open.page \
	gedit-plugins-session-saver.page \
	gedit-plugins-snippets-guide.page \
	gedit-plugins-snippets.page \
	gedit-plugins-sort.page \
	gedit-plugins-tag-list.page \
	gedit-plugins-terminal.page \
	gedit-plugins-text-size.page \
	gedit-plugins-word-completion.page \
	gedit-printing-order.page \
	gedit-printing.page \
	gedit-printing-select.page \
	gedit-quickstart.page \
	gedit-replace.page \
	gedit-save-file.page \
	gedit-search.page \
	gedit-shortcut-keys.page \
	gedit-spellcheck.page \
	gedit-syntax-highlighting.page \
	gedit-tabs-moving.page \
	gedit-tabs.page \
	gedit-undo-recent-action.page \
	gedit-view-open-files-in-sidepane.page \
	index.page

HELP_LINGUAS = ar bg ca cs da de el es eu fi fr gl hu it ja ko oc pt_BR ru sl sv te th uk zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
